--- a/digitalLabel.html
+++ b/digitalLabel.html
@@ -174,15 +174,14 @@
             <div class="point">
                 새로운 방식으로 전달하는 브랜드의 지속가능성
             </div>
-            <ul class="feature">
+            <ul class="feature" id="anchorItem">
                 <li class="item">
                     <img src="./img/ic_digitalLabel_certif.svg" alt="icon">
                     <h4
                         data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
-                        data-aos-delay="100"
-                        data-aos-offset="0"
-                        data-aos-duration="1500"
+                        data-aos-anchor="#anchorItem"
+                        data-aos-delay="50"
                     >인증마크</h4>
                     <p>
                         브랜드에서 직/간접적으로 획득된<br/>
@@ -194,9 +193,8 @@
                     <h4
                         data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
-                        data-aos-delay="300"
-                        data-aos-offset="0"
-                        data-aos-duration="1500"
+                        data-aos-anchor="#anchorItem"
+                        data-aos-delay="50"
                     >키워드</h4>
                     <p>
                         롱레이블 팀이 해석한 특징을<br/>
@@ -208,9 +206,8 @@
                     <h4
                         data-aos="fade-zoom-in"
                         data-aos-easing="ease-in-back"
-                        data-aos-delay="500"
-                        data-aos-offset="0"
-                        data-aos-duration="1500"
+                        data-aos-anchor="#anchorItem"
+                        data-aos-delay="50"
                     >투명성</h4>
                     <p>
                         브랜드가 정보 공개에 얼마나 적극적인지<br/>
@@ -228,9 +225,6 @@
                 <h3
                     data-aos="fade-zoom-in"
                     data-aos-easing="ease-in-back"
-                    data-aos-delay="800"
-                    data-aos-offset="0"
-                    data-aos-duration="1500"
                 >
                     제품이 소비자에게<br/>
                     가기까지의 여정
@@ -252,8 +246,6 @@
                 <h3
                     data-aos="fade-zoom-in"
                     data-aos-easing="ease-in-back"
-                    data-aos-offset="0"
-                    data-aos-duration="1500"
                 >
                     브랜드는 이 많은 정보를 쉽게<br/>
                     입력하고 관리할 수 있도록 했어요
@@ -275,8 +267,6 @@
                 <h3
                     data-aos="fade-zoom-in"
                     data-aos-easing="ease-in-back"
-                    data-aos-offset="0"
-                    data-aos-duration="1500"
                 >
                     데이터로 관리하는<br/>
                     지속가능성
